Revert "Merge branch 'master' into AvniConnector"
This reverts commit 12f8faaa1e247514ac5ca46b1b5209aa704cba4b, reversing
changes made to fbe32de1faa49b7a2716ee9dcf7b4df3a6bf92a3.